Snapshot dce9c18d56

* #3469 Human readable names on USB. (marco)

Snapshot 11013dc3ca

* #3599 Fix the import logic on USB sticks. (marco)

Snapshot 48ab782a01

* Fix for undefined variable error (dcbw)

Snapshot eb82fe83a3

* #3538: Fix a race when deleting objects. (marco)

Snapshot ea13f75d6a

* #2423: Simple partial matching. (bscaller, backported by marco)

Snapshot 7655f4d99a

* #3374: Don't create another entry during async update. (tomeu)
* #3058: Disable content indexing for Trial-3. (tomeu)

Snapshot b0b4c4115a

* #3324: Fix updates of entries with associated files. (tomeu)

Snapshot 617bf5d005

* Index metadata on async updates. (tomeu)
* Allow retrieving a specific set of properties in find(). (tomeu)
* Add a timestamp field to the model for modification time. (tomeu)

Snapshot 0a7e80f01a

* Fix duplicate datastore entries on item creation caused by last commit
* On update() and create(), copy asynchronously where possible, and
  add new "transfer_ownership" argument to update() and create() that
  allow the datastore to move the object rather than copy it (dcbw)

Snapshot a111996299

Snapshot 356b35a278

* #2559 Fix copy of files on a removable device. (bcsaller)
* Fix abiword documents indexing. (bcsaller)

Snapshot 4a4283978f

* More usb devices fixes. (bcsaller)

Snapshot d0bcbf67d1

* Some more fixes for usb devices. (bcsaller)

Snapshot 30ce1b1378

* Copy files on usb devices properly. (bcsaller)

Snapshot 00570bc517

* Several fixes. (bcsaller)

Snapshot 033d224d3b

* Fix date filtering. (bcsaller)

Snapshot e30379af95

* Allow queries on content and all metadata. (bcsaller)

Snapshot 9aabdfb24b

* Guess the mime types using gnomevfs. (bcsaller)

Snapshot 535d9835e2

* #2252 Fix custom metadata properties. (bcsaller)

Snapshot 2978ff86bd

* Allow activities to specify custom metadata properties. (bcsaller)
* Fix the problems with content indexing end reenable it. (bcsaller)

Snapshot 18b7951026

* Full indexing refactor. (bcsaller)